Lab3/YAPLParser.py
# Generated from YAPL.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class YAPLParser ( Parser ):

    grammarFileName = "YAPL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "';'", "'/* implementation */'", 
                     "'printInt'", "'printString'", "','", "'if'", "'then'", 
                     "'else'", "'while'", "'loop'", "'pool'", "'return'", 
                     "'*'", "'/'", "'+'", "'-'", "'<='", "'<'", "'='", "'.'", 
                     "'promptBool'", "'promptString'", "'promptInt'", "'class'", 
                     "'inherits'", "'true'", "'false'", "'isvoid'", "'not'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'~'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "'<-'", "':'", 
                     "'IO'", "'SELF_TYPE'", "'Bool'", "'String'", "'Int'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "PROMPT_BOOL", 
                      "PROMPT_STRING", "PROMPT_INT", "CLASS", "INHERITS", 
                      "TRUE", "FALSE", "ISVOID", "NOT", "TYPE_ID", "STRING_LITERAL", 
                      "INT", "TILDE", "WS", "LINE_COMMENT", "BLOCK_COMMENT", 
                      "LPAREN", "RPAREN", "ASSIGN", "COLON", "IO", "SELF_TYPE", 
                      "BOOL", "STRING_TYPE", "INT_TYPE", "OBJECT_ID" ]

    RULE_program = 0
    RULE_classDef = 1
    RULE_ioClassDef = 2
    RULE_ioFeature = 3
    RULE_feature = 4
    RULE_formalList = 5
    RULE_formal = 6
    RULE_statement = 7
    RULE_block = 8
    RULE_returnStatement = 9
    RULE_expressionList = 10
    RULE_expression = 11
    RULE_assignment = 12
    RULE_methodCall = 13
    RULE_ioMethodCall = 14
    RULE_userMethodCall = 15

    ruleNames =  [ "program", "classDef", "ioClassDef", "ioFeature", "feature", 
                   "formalList", "formal", "statement", "block", "returnStatement", 
                   "expressionList", "expression", "assignment", "methodCall", 
                   "ioMethodCall", "userMethodCall" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    PROMPT_BOOL=23
    PROMPT_STRING=24
    PROMPT_INT=25
    CLASS=26
    INHERITS=27
    TRUE=28
    FALSE=29
    ISVOID=30
    NOT=31
    TYPE_ID=32
    STRING_LITERAL=33
    INT=34
    TILDE=35
    WS=36
    LINE_COMMENT=37
    BLOCK_COMMENT=38
    LPAREN=39
    RPAREN=40
    ASSIGN=41
    COLON=42
    IO=43
    SELF_TYPE=44
    BOOL=45
    STRING_TYPE=46
    INT_TYPE=47
    OBJECT_ID=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ClassDefContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ClassDefContext,i)


        def getRuleIndex(self):
            return YAPLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = YAPLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 32
                self.classDef()
                self.state = 35 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==26 or _la==43):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(YAPLParser.CLASS, 0)

        def TYPE_ID(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.TYPE_ID)
            else:
                return self.getToken(YAPLParser.TYPE_ID, i)

        def INHERITS(self):
            return self.getToken(YAPLParser.INHERITS, 0)

        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.FeatureContext)
            else:
                return self.getTypedRuleContext(YAPLParser.FeatureContext,i)


        def ioClassDef(self):
            return self.getTypedRuleContext(YAPLParser.IoClassDefContext,0)


        def getRuleIndex(self):
            return YAPLParser.RULE_classDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDef" ):
                listener.enterClassDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDef" ):
                listener.exitClassDef(self)




    def classDef(self):

        localctx = YAPLParser.ClassDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classDef)
        self._la = 0 # Token type
        try:
            self.state = 53
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26]:
                self.enterOuterAlt(localctx, 1)
                self.state = 37
                self.match(YAPLParser.CLASS)
                self.state = 38
                self.match(YAPLParser.TYPE_ID)
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==27:
                    self.state = 39
                    self.match(YAPLParser.INHERITS)
                    self.state = 40
                    self.match(YAPLParser.TYPE_ID)


                self.state = 43
                self.match(YAPLParser.T__0)
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==48:
                    self.state = 44
                    self.feature()
                    self.state = 49
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 50
                self.match(YAPLParser.T__1)
                self.state = 51
                self.match(YAPLParser.T__2)
                pass
            elif token in [43]:
                self.enterOuterAlt(localctx, 2)
                self.state = 52
                self.ioClassDef()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IoClassDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IO(self):
            return self.getToken(YAPLParser.IO, 0)

        def ioFeature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.IoFeatureContext)
            else:
                return self.getTypedRuleContext(YAPLParser.IoFeatureContext,i)


        def getRuleIndex(self):
            return YAPLParser.RULE_ioClassDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIoClassDef" ):
                listener.enterIoClassDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIoClassDef" ):
                listener.exitIoClassDef(self)




    def ioClassDef(self):

        localctx = YAPLParser.IoClassDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_ioClassDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(YAPLParser.IO)
            self.state = 56
            self.match(YAPLParser.T__0)
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 58720352) != 0):
                self.state = 57
                self.ioFeature()
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 63
            self.match(YAPLParser.T__1)
            self.state = 64
            self.match(YAPLParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IoFeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROMPT_BOOL(self):
            return self.getToken(YAPLParser.PROMPT_BOOL, 0)

        def LPAREN(self):
            return self.getToken(YAPLParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(YAPLParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(YAPLParser.COLON, 0)

        def BOOL(self):
            return self.getToken(YAPLParser.BOOL, 0)

        def PROMPT_STRING(self):
            return self.getToken(YAPLParser.PROMPT_STRING, 0)

        def STRING_TYPE(self):
            return self.getToken(YAPLParser.STRING_TYPE, 0)

        def PROMPT_INT(self):
            return self.getToken(YAPLParser.PROMPT_INT, 0)

        def INT_TYPE(self):
            return self.getToken(YAPLParser.INT_TYPE, 0)

        def SELF_TYPE(self):
            return self.getToken(YAPLParser.SELF_TYPE, 0)

        def getRuleIndex(self):
            return YAPLParser.RULE_ioFeature

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIoFeature" ):
                listener.enterIoFeature(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIoFeature" ):
                listener.exitIoFeature(self)




    def ioFeature(self):

        localctx = YAPLParser.IoFeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ioFeature)
        try:
            self.state = 113
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [23]:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.match(YAPLParser.PROMPT_BOOL)
                self.state = 67
                self.match(YAPLParser.LPAREN)
                self.state = 68
                self.match(YAPLParser.RPAREN)
                self.state = 69
                self.match(YAPLParser.COLON)
                self.state = 70
                self.match(YAPLParser.BOOL)
                self.state = 71
                self.match(YAPLParser.T__0)
                self.state = 72
                self.match(YAPLParser.T__3)
                self.state = 73
                self.match(YAPLParser.T__1)
                self.state = 74
                self.match(YAPLParser.T__2)
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 2)
                self.state = 75
                self.match(YAPLParser.PROMPT_STRING)
                self.state = 76
                self.match(YAPLParser.LPAREN)
                self.state = 77
                self.match(YAPLParser.RPAREN)
                self.state = 78
                self.match(YAPLParser.COLON)
                self.state = 79
                self.match(YAPLParser.STRING_TYPE)
                self.state = 80
                self.match(YAPLParser.T__0)
                self.state = 81
                self.match(YAPLParser.T__3)
                self.state = 82
                self.match(YAPLParser.T__1)
                self.state = 83
                self.match(YAPLParser.T__2)
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 3)
                self.state = 84
                self.match(YAPLParser.PROMPT_INT)
                self.state = 85
                self.match(YAPLParser.LPAREN)
                self.state = 86
                self.match(YAPLParser.RPAREN)
                self.state = 87
                self.match(YAPLParser.COLON)
                self.state = 88
                self.match(YAPLParser.INT_TYPE)
                self.state = 89
                self.match(YAPLParser.T__0)
                self.state = 90
                self.match(YAPLParser.T__3)
                self.state = 91
                self.match(YAPLParser.T__1)
                self.state = 92
                self.match(YAPLParser.T__2)
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 93
                self.match(YAPLParser.T__4)
                self.state = 94
                self.match(YAPLParser.LPAREN)
                self.state = 95
                self.match(YAPLParser.INT_TYPE)
                self.state = 96
                self.match(YAPLParser.RPAREN)
                self.state = 97
                self.match(YAPLParser.COLON)
                self.state = 98
                self.match(YAPLParser.SELF_TYPE)
                self.state = 99
                self.match(YAPLParser.T__0)
                self.state = 100
                self.match(YAPLParser.T__3)
                self.state = 101
                self.match(YAPLParser.T__1)
                self.state = 102
                self.match(YAPLParser.T__2)
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 5)
                self.state = 103
                self.match(YAPLParser.T__5)
                self.state = 104
                self.match(YAPLParser.LPAREN)
                self.state = 105
                self.match(YAPLParser.STRING_TYPE)
                self.state = 106
                self.match(YAPLParser.RPAREN)
                self.state = 107
                self.match(YAPLParser.COLON)
                self.state = 108
                self.match(YAPLParser.SELF_TYPE)
                self.state = 109
                self.match(YAPLParser.T__0)
                self.state = 110
                self.match(YAPLParser.T__3)
                self.state = 111
                self.match(YAPLParser.T__1)
                self.state = 112
                self.match(YAPLParser.T__2)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBJECT_ID(self):
            return self.getToken(YAPLParser.OBJECT_ID, 0)

        def COLON(self):
            return self.getToken(YAPLParser.COLON, 0)

        def TYPE_ID(self):
            return self.getToken(YAPLParser.TYPE_ID, 0)

        def LPAREN(self):
            return self.getToken(YAPLParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(YAPLParser.RPAREN, 0)

        def formalList(self):
            return self.getTypedRuleContext(YAPLParser.FormalListContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.StatementContext)
            else:
                return self.getTypedRuleContext(YAPLParser.StatementContext,i)


        def getRuleIndex(self):
            return YAPLParser.RULE_feature

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeature" ):
                listener.enterFeature(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeature" ):
                listener.exitFeature(self)




    def feature(self):

        localctx = YAPLParser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_feature)
        self._la = 0 # Token type
        try:
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.match(YAPLParser.OBJECT_ID)
                self.state = 116
                self.match(YAPLParser.COLON)
                self.state = 117
                self.match(YAPLParser.TYPE_ID)
                self.state = 118
                self.match(YAPLParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.match(YAPLParser.OBJECT_ID)
                self.state = 120
                self.match(YAPLParser.LPAREN)
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==48:
                    self.state = 121
                    self.formalList()


                self.state = 124
                self.match(YAPLParser.RPAREN)
                self.state = 125
                self.match(YAPLParser.COLON)
                self.state = 126
                self.match(YAPLParser.TYPE_ID)
                self.state = 127
                self.match(YAPLParser.T__0)
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 281474976729344) != 0):
                    self.state = 128
                    self.statement()
                    self.state = 133
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 134
                self.match(YAPLParser.T__1)
                self.state = 135
                self.match(YAPLParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def formal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.FormalContext)
            else:
                return self.getTypedRuleContext(YAPLParser.FormalContext,i)


        def getRuleIndex(self):
            return YAPLParser.RULE_formalList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormalList" ):
                listener.enterFormalList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormalList" ):
                listener.exitFormalList(self)




    def formalList(self):

        localctx = YAPLParser.FormalListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_formalList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.formal()
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 139
                self.match(YAPLParser.T__6)
                self.state = 140
                self.formal()
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBJECT_ID(self):
            return self.getToken(YAPLParser.OBJECT_ID, 0)

        def COLON(self):
            return self.getToken(YAPLParser.COLON, 0)

        def TYPE_ID(self):
            return self.getToken(YAPLParser.TYPE_ID, 0)

        def getRuleIndex(self):
            return YAPLParser.RULE_formal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormal" ):
                listener.enterFormal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormal" ):
                listener.exitFormal(self)




    def formal(self):

        localctx = YAPLParser.FormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_formal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(YAPLParser.OBJECT_ID)
            self.state = 147
            self.match(YAPLParser.COLON)
            self.state = 148
            self.match(YAPLParser.TYPE_ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(YAPLParser.ExpressionContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.BlockContext)
            else:
                return self.getTypedRuleContext(YAPLParser.BlockContext,i)


        def assignment(self):
            return self.getTypedRuleContext(YAPLParser.AssignmentContext,0)


        def methodCall(self):
            return self.getTypedRuleContext(YAPLParser.MethodCallContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(YAPLParser.ReturnStatementContext,0)


        def getRuleIndex(self):
            return YAPLParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = YAPLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_statement)
        try:
            self.state = 170
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                self.match(YAPLParser.T__7)
                self.state = 151
                self.expression(0)
                self.state = 152
                self.match(YAPLParser.T__8)
                self.state = 153
                self.block()
                self.state = 154
                self.match(YAPLParser.T__9)
                self.state = 155
                self.block()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.match(YAPLParser.T__10)
                self.state = 158
                self.expression(0)
                self.state = 159
                self.match(YAPLParser.T__11)
                self.state = 160
                self.block()
                self.state = 161
                self.match(YAPLParser.T__12)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 163
                self.assignment()
                self.state = 164
                self.match(YAPLParser.T__2)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 166
                self.methodCall()
                self.state = 167
                self.match(YAPLParser.T__2)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 169
                self.returnStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.StatementContext)
            else:
                return self.getTypedRuleContext(YAPLParser.StatementContext,i)


        def getRuleIndex(self):
            return YAPLParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = YAPLParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.match(YAPLParser.T__0)
            self.state = 176
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 281474976729344) != 0):
                self.state = 173
                self.statement()
                self.state = 178
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 179
            self.match(YAPLParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(YAPLParser.ExpressionContext,0)


        def getRuleIndex(self):
            return YAPLParser.RULE_returnStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStatement" ):
                listener.enterReturnStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStatement" ):
                listener.exitReturnStatement(self)




    def returnStatement(self):

        localctx = YAPLParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_returnStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self.match(YAPLParser.T__13)
            self.state = 182
            self.expression(0)
            self.state = 183
            self.match(YAPLParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExpressionContext,i)


        def getRuleIndex(self):
            return YAPLParser.RULE_expressionList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionList" ):
                listener.enterExpressionList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionList" ):
                listener.exitExpressionList(self)




    def expressionList(self):

        localctx = YAPLParser.ExpressionListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expressionList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self.expression(0)
            self.state = 190
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 186
                self.match(YAPLParser.T__6)
                self.state = 187
                self.expression(0)
                self.state = 192
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(YAPLParser.INT, 0)

        def OBJECT_ID(self):
            return self.getToken(YAPLParser.OBJECT_ID, 0)

        def STRING_LITERAL(self):
            return self.getToken(YAPLParser.STRING_LITERAL, 0)

        def TRUE(self):
            return self.getToken(YAPLParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(YAPLParser.FALSE, 0)

        def methodCall(self):
            return self.getTypedRuleContext(YAPLParser.MethodCallContext,0)


        def LPAREN(self):
            return self.getToken(YAPLParser.LPAREN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExpressionContext,i)


        def RPAREN(self):
            return self.getToken(YAPLParser.RPAREN, 0)

        def NOT(self):
            return self.getToken(YAPLParser.NOT, 0)

        def TILDE(self):
            return self.getToken(YAPLParser.TILDE, 0)

        def assignment(self):
            return self.getTypedRuleContext(YAPLParser.AssignmentContext,0)


        def getRuleIndex(self):
            return YAPLParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = YAPLParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 209
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 194
                self.match(YAPLParser.INT)
                pass

            elif la_ == 2:
                self.state = 195
                self.match(YAPLParser.OBJECT_ID)
                pass

            elif la_ == 3:
                self.state = 196
                self.match(YAPLParser.STRING_LITERAL)
                pass

            elif la_ == 4:
                self.state = 197
                self.match(YAPLParser.TRUE)
                pass

            elif la_ == 5:
                self.state = 198
                self.match(YAPLParser.FALSE)
                pass

            elif la_ == 6:
                self.state = 199
                self.methodCall()
                pass

            elif la_ == 7:
                self.state = 200
                self.match(YAPLParser.LPAREN)
                self.state = 201
                self.expression(0)
                self.state = 202
                self.match(YAPLParser.RPAREN)
                pass
